# DiscordBot

./: .gitignore
discord-bot/: README.md  pyproject.toml
discord-bot/src/: main.py  websocket_server.py
discord-bot/tests/: test_basic.py
