[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = "A basic Discord bot"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
discord.py = "^2.0"  # Specify the version you need

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"